--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^5.0.5",
     "@angular/router": "^5.0.5",
     "core-js": "^2.5.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.5",
     "zone.js": "^0.8.18"
