--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ngx-restangular": "^2.0.2",
     "rxjs": "^5.5.5",
     "zone.js": "^0.8.18"
   },
